--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
+    <input id="cep">
     <button type="button" onclick="consulta()">Clique aqui</button>
+    <p id="logradouro"></p>
+    <p id="bairro"></p>
+    <p id="complemento"></p>
+    <p id="uf"></p>
+    <p id="localidade"></p>
+    <p id="siafi"></p>
+    <p id="ibge"></p>
+    <p id="gia"></p>
+    <p id="ddd"></p>
 </body>
 </html>
